<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:lottie_rawRes="@raw/reading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/screennaimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/animationView"
        android:fontFamily="@font/ubantu"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnscreen"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="48dp"
        android:layout_below="@id/screennaimation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/btn"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/ubantu"
        android:text="@string/Next"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"
        android:layout_below="@id/btnscreen"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/ubantu"
        android:gravity="center"
        android:text="@string/developer_tanvir_ahmed"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        tools:ignore="TextSizeCheck" />
</RelativeLayout>